# mma-meeting

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  server.py
datas/: admin.json  config.ini.sample  password.txt.sample
meeting/: __init__.py  views.py
meeting/models/: agenda.py  gas.js  password.py  result.py  room.py  scrape.py  spread.py  thread.py
meeting/static/css/: common.css
meeting/static/javascript/: common.js
meeting/templates/: layout.html
meeting/templates/meeting/: 403.html  404.html  500.html  admin.html  admin_conf.html  agenda.html  form.html  login.html  result.html  room.html  thread.html
